--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <link rel="stylesheet" src="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/css/ionic/ionic.bundle.css"></link>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/dist/ionic/ionic.js"></script>
 </head>
 
 <body>
